# premaidai-gym

./: .gitignore  README.rst  pyproject.toml
examples/: cpg_walk.py  example.py
premaidai_gym/: __init__.py  roboschool_premaidai_walker.py  simple_walk_controller.py
premaidai_gym/assets/: premaidai.urdf
premaidai_gym/models_robot/premaidai_description/urdf/: premaidai.urdf
premaidai_gym/mujoco_assets/: khr3_extend.xml
tests/: test_premaidai_gym.py
