[tool.poetry]
name = "premaidai-gym"
version = "0.1.0"
description = ""
authors = ["Shundo Kishi <syundo0730@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
roboschool = "^1.0"
numpy = "^1.17"
gym = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
