[tool.poetry]
name = "premaidai-gym"
version = "0.2.8"
description = ""
authors = ["Shundo Kishi <syundo0730@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
roboschool = "^1.0"
numpy = "^1.17"
gym = "^0.10.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
